# pyDMBD

./: .gitignore  README.md  pyproject.toml
examples/: artificial_life.py  calcium_imaging.py  dmbd_demo.ipynb  flame.py  flocking.py  life_as_we_know_it.py  lorenz.py  newtons_cradle.py
models/: DeepDMBD.py  DynamicMarkovBlanketDiscovery.py  __init__.py
simulations/: Flame.py  Flocking.py  Forager.py  Lorenz.py  NewtonsCradle.py  __init__.py
tests/: conftest.py  test_bayes_net.py  test_dmbd_pytest.py  test_vbem.py
